# tree-sitter-unstructured

./: Cargo.toml  README.md  binding.gyp  grammar.js  package.json
bindings/node/: binding.cc  index.js
bindings/rust/: lib.rs
src/: grammar.json  parser.c
test/corpus/: english
